--- a/app/src/main/res/layout/fragment_opciones_juego.xml
+++ b/app/src/main/res/layout/fragment_opciones_juego.xml
@@ -13,6 +13,8 @@
         android:id="@+id/sliderPager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:focusable="false"
         android:layout_weight="0.6"
         />
