--- a/app/src/main/res/layout/fragment_juego.xml
+++ b/app/src/main/res/layout/fragment_juego.xml
@@ -55,10 +55,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
                 <TextView
-                    android:id="@+id/txtCantParejas"
+                    android:id="@+id/txtCantParejasTotal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:textStyle="bold"
+                    android:text="0-" />
+                <TextView
+                    android:id="@+id/txtCantParejas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:text="0" />
                 <TextView
