--- a/app/src/main/res/layout/fragment_personajes.xml
+++ b/app/src/main/res/layout/fragment_personajes.xml
@@ -13,6 +13,11 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
         android:text="Escoja personaje"
+        android:paddingRight="15dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="15dp"
+        android:background="@drawable/backgroundblanco"
         android:textSize="24sp" />
 
     <LinearLayout
